--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -4,25 +4,29 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	{% if site.description %}<meta name="description" content="{{ site.description }}">{% endif %}
-	{% if site.keywords %}<meta name="keywords" content="{{ site.keywords}}">{% endif %}
 	<meta name="generator" content="{{eleventy.generator}}">
-	<meta name="theme-color" content="{{site.color}}">
-	<link rel="author" href="humans.txt"/>
 
-	<title>{{ site.title }}</title>
+	<link rel="alternate" href="/feed.rss" title="11ty hub" type="application/rss+xml">
+
+	<title>11ty Hub</title>
 	<link href="{{ '/assets/style.css' | url }}" rel="stylesheet">
 </head>
 <body>
 
-<h1>	{{ title }}</h1>
+<main>
+	<h1>{{ title }}</h1>
+	<div>
+	{{ content | safe }}
+	</div>
+</main>
+<footer>
+	made with 😍 & ☕️ by <a href="https://morten.dk">mortendk</a>
+	🐞
+	<a href="https://github.com/mortendk/11tyhub.dev">github</a>
 
-{{ content | safe }}
+</footer>
 
- <a href="feed.rss"></a>
-
-
-		{# Service worker #}
+{# Service worker #}
 <script>
 	if (navigator && navigator.serviceWorker) {
 		navigator
