--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -20,10 +20,12 @@ footer {
 }
 
 h1 {
-	text-align: center
+	font-size: 2rem;
 }
 h2 {
+	font-size: 2rem;
 	margin: 0;
+	color: brown
 }
 
 .icon {
