--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -9,8 +9,8 @@
 	<h1>11ty Hub</h1>
 
 	<nav>
-		<a href="/">11ty Hub</a>
+		<a href="/">11ty Hub</a> |
+		<a href="/info">info</a> |
 		<a href="https://11tyhub.dev/feed.rss">feed</a>
-		<a href="/info">info</a>
 	</nav>
 </header>
