less ugly colors

--- a/src/content/index.njk
+++ b/src/content/index.njk
@@ -12,9 +12,9 @@ layout: page.njk
 <article class="feeditem">
 
 	<h2>
-		{# <div class="icon">
+		<div class="icon">
 			{% include "rss.svg" %}
-		</div> #}
+		</div>
 
 		<a href="{{feed.link}}" target="_blank">
 		{% if feed.title %}
