--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -25,21 +25,26 @@ h1 {
 h2 {
 	font-size: 2rem;
 	margin: 0;
-	color: brown
+	color: #3B719F
 }
 
 .icon {
 	width: 2rem;
-	color: orange
+	color: #FD5956
 }
 
 .feeditem {
-	margin-bottom: 0.5rem;
-	padding-bottom: 0.5rem;
-	background-color: gray
+	margin: 0.5rem;
+	padding: 0.5rem;
+	background-color: #D8DCD6
 }
 
+.feeditem .icon {
+	color: #abada9
+}
 .feeditem h2 a {
+	color: #3B719F;
+	font-weight: light;
 	text-decoration: none
 }
 
