--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -21,12 +21,7 @@
 
 </main>
 
-<footer>
-	made with 😍 & ☕️ by <a href="https://morten.dk">mortendk</a>
-	🐞
-	<a href="https://github.com/mortendk/11tyhub.dev">github</a>
-</footer>
-
+{% include "footer.njk" %}
 {# Service worker #}
 <script>
 	if (navigator && navigator.serviceWorker) {
