--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -1,16 +1,17 @@
 <header class="header">
+	<h1>11ty Hub</h1>
 
-	<a href="https://11tyhub.dev/feed.rss">
+	<a href="/">
 		<div class="icon">
 			{% include "rss.svg" %}
 		</div>
-	</a>
 
-	<h1>11ty Hub</h1>
+	</a>
 
 	<nav>
 		<a href="/">11ty Hub</a> |
 		<a href="/info">info</a> |
 		<a href="https://11tyhub.dev/feed.rss">feed</a>
 	</nav>
+
 </header>
