added list of feeds

--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -11,6 +11,8 @@
 	<nav>
 		<a href="/">11ty Hub</a> |
 		<a href="/info">info</a> |
+		<a href="/feedlist">feedlist</a> |
+
 		<a href="https://11tyhub.dev/feed.rss">feed</a>
 	</nav>
 
