--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -7,6 +7,7 @@
 	<meta name="generator" content="{{eleventy.generator}}">
 
 	<link rel="alternate" href="/feed.rss" title="11ty hub" type="application/rss+xml">
+	<script defer data-domain="11tyhub.dev" src="https://plausible.io/js/script.js"></script>
 
 	<title>11ty Hub</title>
 	<link href="{{ '/assets/style.css' | url }}" rel="stylesheet">
