--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -3,4 +3,5 @@
 	<br>
 	Made with 😍 & ☕️ by <a href="https://morten.dk">mortendk</a>
 	| <a href="https://github.com/mortendk/11tyhub.dev">Github</a>
+	<a rel="me" href="https://mastodon.social/@mortendk"></a>
 </footer>
