adding youtube feeds

--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -1,5 +1,5 @@
 <footer>
-	v 0.1.0 alfa
+	{{ version }}
 	<br>
 	Made with 😍 & ☕️ by <a href="https://morten.dk">mortendk</a>
 	| <a href="https://github.com/mortendk/11tyhub.dev">Github</a>
