--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -1,7 +1,7 @@
 <footer>
-	{{ version }}
-	<br>
-	Made with 😍 & ☕️ by <a href="https://morten.dk">mortendk</a>
-	| <a href="https://github.com/mortendk/11tyhub.dev">Github</a>
-	<a rel="me" href="https://mastodon.social/@mortendk"></a>
+	{{ version }} |
+	Made with 🎈️
+	<a href="https://morten.dk">mortendk</a> |
+	<a href="https://github.com/mortendk/11tyhub.dev">Source</a> |
+	<a rel="me" href="https://mastodon.social/@mortendk">mastodon</a>
 </footer>
