--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -1,20 +1,26 @@
-<header class="header">
-	<h1>11ty Hub</h1>
+<header>
+<h1 hidden> Eleventy Hub</h1>
 
-	<a href="/">
+
+<pre class="ascii-awesome">
+ ░█▀▀░█░░░█▀▀░█░█░█▀▀░█▀█░▀█▀░█░█░░░█░█░█░█░█▀▄
+ ░█▀▀░█░░░█▀▀░▀▄▀░█▀▀░█░█░░█░░░█░░░░█▀█░█░█░█▀▄
+ ░▀▀▀░▀▀▀░▀▀▀░░▀░░▀▀▀░▀░▀░░▀░░░▀░░░░▀░▀░▀▀▀░▀▀░
+ </pre>
+
+	<a href="https://11tyhub.dev/feed.rss">
 		<div class="icon">
 			{% include "rss.svg" %}
 		</div>
-
 	</a>
 
-	<nav>
-		<a href="/">11ty Hub</a> |
-		<a href="/info">info</a> |
-		<a href="/feedlist">feedlist</a> |
-
-		<a href="https://11tyhub.dev/feed.rss">feed</a>
+	<nav>[
+	{%- for item in collections.page -%}
+	{% if page.url == item.url %} 🎈{% endif %}
+		<a href="{{item.url}}"
+		{% if page.url == item.url %} aria-current="page"{% endif %}>
+		{{ item.data.title }}</a> |
+	{%- endfor -%}
+	]
 	</nav>
-
-	<input value="https://11tyhub.dev/feed.rss">
 </header>
