adding opengraph images + tags

--- a/src/content/index.njk
+++ b/src/content/index.njk
@@ -7,8 +7,7 @@ layout: page.njk
 tags: page
 ---
 <p class="text">
-The eleventy hub aggregates all rss feeds we can find that
-is if some interest for the <a href="https://11ty.dev">11ty Project</a>
+The eleventy hub aggregates rss feeds from the [11ty Project](https://11ty.dev)
 </p>
 
 
