--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -3,18 +3,47 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<meta name="generator" content="{{eleventy.generator}}">
+
 	<link rel="alternate" href="/feed.rss" title="11ty hub" type="application/rss+xml">
 	<script defer data-domain="11tyhub.dev" src="https://plausible.io/js/script.js"></script>
-	<title>11ty Hub</title>
+	<title>Eleventy Hub</title>
 	<link href="{{ '/assets/style.css' | url }}" rel="stylesheet">
+
+	{# OG Facebook #}
+	<meta property="og:url" content="https://11tyhub.dev">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="11ty Hub">
+	<meta property="og:description" content="undefined">
+	<meta property="og:image" content="/assets/facebook.jpg">
+
+	<meta property="og:site_name" content="Eleventy Hub">
+	<meta property="og:title" content="Eleventy Hub">
+	<meta property="og:url" content="https://11tyhub.dev">
+	<meta property="og:description" content="The eleventy hub aggregates all rss feeds we can find that is if some interest for the 11ty Project">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="/assets/twitter.jpg">
+	<meta property="og:image:width" content="1200"/>
+	<meta property="og:image:height" content="630"/>
+	{# Twitter #}
+	<meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="11tyhub.dev">
+	<meta property="twitter:url" content="https://11tyhub.dev">
+
+	<meta name="twitter:title" content="Eleventy Hub">
+	<meta name="twitter:description" content="{{ ogdescription }}">
+	<meta name="twitter:image" content="{{ ogimage }}">
+	<meta name="twitter:description" content="undefined">
 </head>
 <body>
 
 {% include "header.njk" %}
 <main>
+	<h2>{{ title }}</h1>
 
 	{{ content | safe }}
+
 </main>
 
 {% include "footer.njk" %}
