--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -11,30 +11,24 @@
 	<title>Eleventy Hub</title>
 	<link href="{{ '/assets/style.css' | url }}" rel="stylesheet">
 
-	{# OG Facebook #}
+ <meta name="description" content="Aggregated RSS feeds from the 11ty Project">
+
+	<!-- Facebook Meta Tags -->
 	<meta property="og:url" content="https://11tyhub.dev">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="11ty Hub">
-	<meta property="og:description" content="undefined">
+	<meta property="og:title" content="Eleventy Hub">
+	<meta property="og:description" content="Aggregated RSS feeds from the 11ty Project">
 	<meta property="og:image" content="/assets/facebook.jpg">
 
-	<meta property="og:site_name" content="Eleventy Hub">
-	<meta property="og:title" content="Eleventy Hub">
-	<meta property="og:url" content="https://11tyhub.dev">
-	<meta property="og:description" content="The eleventy hub aggregates all rss feeds we can find that is if some interest for the 11ty Project">
-	<meta property="og:type" content="website">
-	<meta property="og:image" content="/assets/twitter.jpg">
-	<meta property="og:image:width" content="1200"/>
-	<meta property="og:image:height" content="630"/>
-	{# Twitter #}
+	<!-- Twitter Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="11tyhub.dev">
+	<meta property="twitter:domain" content="11tyhub.dev">
 	<meta property="twitter:url" content="https://11tyhub.dev">
-
 	<meta name="twitter:title" content="Eleventy Hub">
-	<meta name="twitter:description" content="{{ ogdescription }}">
-	<meta name="twitter:image" content="{{ ogimage }}">
-	<meta name="twitter:description" content="undefined">
+	<meta name="twitter:description" content="Aggregated RSS feeds from the 11ty Project">
+	<meta name="twitter:image" content="/assets/twitter.jpg">
+
+
 </head>
 <body>
 
