--- a/src/content/index.njk
+++ b/src/content/index.njk
@@ -6,8 +6,9 @@ eleventyExcludeFromCollections: false
 layout: page.njk
 tags: page
 ---
+
 <p class="text">
-The eleventy hub aggregates rss feeds from the [11ty Project](https://11ty.dev)
+An aggregation of feeds, blogs & releases from the <a href="https://11ty.dev">11ty Project</a>
 </p>
 
 
