--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -4,8 +4,15 @@ body {
 }
 
 main {
-	width: 60%;
+	width: 90%;
 	margin: 0 auto;
+}
+
+@media (min-width: 1280px) {
+	main {
+		width: 60%;
+		margin: 0 auto;
+	}
 }
 
 header {
@@ -17,7 +24,10 @@ header {
 	margin: 0 auto;
 }
 
-footer {text-align: center}
+footer {
+	text-align: center
+}
+
 header h1 {
 	font-size: 2rem;
 }
@@ -29,11 +39,16 @@ h2 {
 }
 
 .text {
-	padding: 1rem 0;
-	width: 50%;
+	padding: 2rem 0;
 	margin: 0 auto;
 	font-size: 1.2rem;
 }
+@media (min-width: 1280px) {
+	.text {
+		width: 50%
+	}
+}
+
 .ascii-awesome {
 	color: gray;
 	font-family: monospace;
@@ -78,7 +93,6 @@ input.superawesome {
 label {
 	display: block;
 	font-weight: bold;
-
 }
 
 input {
@@ -88,10 +102,20 @@ input {
 	font-family: monospace;
 	font-size: 1.5rem;
 }
+
 textarea {
 	height: 10rem;
 	width: 30rem;
 	font-weight: bold;
 	font-family: monospace;
 	font-size: 1.5rem;
+}
+
+button {
+	padding: 0.5rem;
+	background-color: orange;
+	border: none;
+	font-weight: bold;
+	font-size: 0.8rem;
+	text-transform: uppercase;
 }
