cleaning up remove old icon

--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -27,7 +27,7 @@
 	<meta name="twitter:image" content="/assets/twitter.jpg">
 
 	{% favicons "src/assets/icon.svg",
-			appleIconBgColor= '#808080',
+			appleIconBgColor= '#ffffff',
 			manifestData={
 				"name": 'Eleventy Hub' ,
 				"short_name": '11ty hub',
