--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -9,6 +9,7 @@
  </pre>
 
 	<a href="https://11tyhub.dev/feed.rss">
+		<span class="sr-only">rss feed</span>
 		<div class="icon">
 			{% include "rss.svg" %}
 		</div>
